--- a/index.html
+++ b/index.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Drum Kit</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <!-- Make space for a Happy face to put on whichever side "wins" the dice roll -->
-        <div class="container">
-            <img id="pic1" src="images/thumb-up.png">
-            <h1>Rolling Dice Game</h1>
-            <img id="pic2" src="images/middle-finger.png">
-        </div>
-    </header>
 
-    <div class="scoreboard">
-                        <!-- bootstrap card with flexbox justifications so they are on opposite ends of the screen -->
-        <div class="score">Score: <span id="score1">0</span></div><div class="score">Score: <span id="score2">0</span></div>
-    </div>
+  <h1 id="title">Drum 🥁 Kit</h1>
+  <div class="set">
+    <button class="w drum">w</button>
+    <button class="a drum">a</button>
+    <button class="s drum">s</button>
+    <button class="d drum">d</button>
+    <button class="j drum">j</button>
+    <button class="k drum">k</button>
+    <button class="l drum">l</button>
+  </div>
 
-        <!-- BIG SPACE -->
-    <div class="dice-table">
-        <div class="dice-space">
-            <img id="dice1" src="images/dice1.png" alt="dice1">
-        </div>
-        <div class="dice-space">
-            <img id="dice2" src="images/dice2.png" alt="dice2">
-        </div>
-    </div>
-    <button type="button" class="btn btn-lg btn-primary">CLICK TO ROLL DICE</button>
 
-    <footer>
-        <p>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-        </p>   
-    </footer>
+  <footer>
+    Made with ❤️ in Boston.
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="script.js" charset="UTF-8" type="text/javascript"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
+
 </html>
